spacing fixed

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -127,11 +127,11 @@
         justify-content: center;
         margin-bottom: 32px;
 
-        img {
-            // width: 120px;
-            // position: relative;
-            // top: 24px;
-        }
+        // img {
+        //     width: 120px;
+        //     position: relative;
+        //     top: 24px;
+        // }
     }
 
     &__name {
